@@ -147,7 +147,9 @@
 #define SET_GL_ACCUM_GREEN_BITS		114
 #define SET_GL_ACCUM_BLUE_BITS		115
 #define SET_GL_ACCUM_ALPHA_BITS		116
-#define SET_GL_NUM_SAMPLES			117
+#define SET_GL_NUM_SAMPLES		117
+#define SET_GL_2D_MODE			150
+#define SET_GL_SCALE			151
 
 #define POLL_EVENTS					200
 
